Asn4/spl/SplParser.java
// Generated from Spl.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIGIT=1, PROGRAM=2, INT_TYPE=3, BOOL_TYPE=4, STRING_TYPE=5, ARRAY=6, OF=7, 
		READ=8, WRITE=9, IF=10, THEN=11, ELSE=12, WHILE=13, DO=14, EXIT=15, VAR=16, 
		BODY=17, BEGIN=18, END=19, AND=20, OR=21, NOT=22, TRUE=23, FALSE=24, PLUS=25, 
		MINUS=26, MULTIPLE=27, DIV=28, MOD=29, EQUALS=30, GREATER=31, LESS=32, 
		LFPAR=33, RTPAR=34, COMMA=35, COLON=36, LBRA=37, RBRA=38, S_CONC=39, UNDERSCORE=40, 
		SEMICOLON=41, ASSIGN=42, GTEQ=43, LTEQ=44, NEQ=45, LETTER=46, PNAME=47, 
		STRING=48, COMMENT=49, WS=50;
	public static final int
		RULE_init = 0, RULE_mainprogram = 1, RULE_var_dec = 2, RULE_type = 3, 
		RULE_array_type = 4, RULE_s_body = 5, RULE_r_body = 6, RULE_statement = 7, 
		RULE_assign_statement = 8, RULE_ifelse_statement = 9, RULE_if_st = 10, 
		RULE_else_st = 11, RULE_read_statement = 12, RULE_write_statement = 13, 
		RULE_while_statement = 14, RULE_output = 15, RULE_exp = 16, RULE_term = 17, 
		RULE_comp_res = 18, RULE_bool_ops = 19, RULE_log_ops = 20, RULE_asn_numbers = 21, 
		RULE_array_bracks = 22, RULE_id = 23, RULE_comp_ops = 24;
	public static final String[] ruleNames = {
		"init", "mainprogram", "var_dec", "type", "array_type", "s_body", "r_body", 
		"statement", "assign_statement", "ifelse_statement", "if_st", "else_st", 
		"read_statement", "write_statement", "while_statement", "output", "exp", 
		"term", "comp_res", "bool_ops", "log_ops", "asn_numbers", "array_bracks", 
		"id", "comp_ops"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'PROGRAM'", "'INTEGER'", "'BOOLEAN'", "'STRING'", "'ARRAY'", 
		"'OF'", "'READ'", "'WRITE'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", 
		"'EXIT'", "'VAR'", "'BODY'", "'BEGIN'", "'END'", "'AND'", "'OR'", "'NOT'", 
		"'TRUE'", "'FALSE'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'>'", 
		"'<'", "'('", "')'", "','", "':'", "'['", "']'", "'|'", "'_'", "';'", 
		"':='", "'>='", "'<='", "'<>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DIGIT", "PROGRAM", "INT_TYPE", "BOOL_TYPE", "STRING_TYPE", "ARRAY", 
		"OF", "READ", "WRITE", "IF", "THEN", "ELSE", "WHILE", "DO", "EXIT", "VAR", 
		"BODY", "BEGIN", "END", "AND", "OR", "NOT", "TRUE", "FALSE", "PLUS", "MINUS", 
		"MULTIPLE", "DIV", "MOD", "EQUALS", "GREATER", "LESS", "LFPAR", "RTPAR", 
		"COMMA", "COLON", "LBRA", "RBRA", "S_CONC", "UNDERSCORE", "SEMICOLON", 
		"ASSIGN", "GTEQ", "LTEQ", "NEQ", "LETTER", "PNAME", "STRING", "COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Spl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(SplParser.PROGRAM, 0); }
		public TerminalNode PNAME() { return getToken(SplParser.PNAME, 0); }
		public MainprogramContext mainprogram() {
			return getRuleContext(MainprogramContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(PROGRAM);
			setState(51);
			match(PNAME);
			setState(52);
			mainprogram();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainprogramContext extends ParserRuleContext {
		public TerminalNode BODY() { return getToken(SplParser.BODY, 0); }
		public S_bodyContext s_body() {
			return getRuleContext(S_bodyContext.class,0);
		}
		public R_bodyContext r_body() {
			return getRuleContext(R_bodyContext.class,0);
		}
		public List<Var_decContext> var_dec() {
			return getRuleContexts(Var_decContext.class);
		}
		public Var_decContext var_dec(int i) {
			return getRuleContext(Var_decContext.class,i);
		}
		public MainprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainprogram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterMainprogram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitMainprogram(this);
		}
	}

	public final MainprogramContext mainprogram() throws RecognitionException {
		MainprogramContext _localctx = new MainprogramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainprogram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(54);
				var_dec();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(BODY);
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
			case WRITE:
			case IF:
			case WHILE:
			case EXIT:
			case UNDERSCORE:
			case LETTER:
				{
				setState(61);
				s_body();
				}
				break;
			case BEGIN:
				{
				setState(62);
				r_body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_decContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(SplParser.VAR, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(SplParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(SplParser.COLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SplParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SplParser.COMMA, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(SplParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(SplParser.SEMICOLON, i);
		}
		public Var_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterVar_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitVar_dec(this);
		}
	}

	public final Var_decContext var_dec() throws RecognitionException {
		Var_decContext _localctx = new Var_decContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(VAR);
			setState(82); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				id();
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(67);
					match(COMMA);
					setState(68);
					id();
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(74);
				match(COLON);
				setState(75);
				type();
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMICOLON) {
					{
					{
					setState(76);
					match(SEMICOLON);
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==UNDERSCORE || _la==LETTER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(SplParser.INT_TYPE, 0); }
		public TerminalNode BOOL_TYPE() { return getToken(SplParser.BOOL_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(SplParser.STRING_TYPE, 0); }
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(INT_TYPE);
				}
				break;
			case BOOL_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(BOOL_TYPE);
				}
				break;
			case STRING_TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				match(STRING_TYPE);
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				array_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_typeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(SplParser.ARRAY, 0); }
		public Array_bracksContext array_bracks() {
			return getRuleContext(Array_bracksContext.class,0);
		}
		public TerminalNode OF() { return getToken(SplParser.OF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterArray_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitArray_type(this);
		}
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_array_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ARRAY);
			setState(93);
			array_bracks();
			setState(94);
			match(OF);
			setState(95);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class S_bodyContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public S_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterS_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitS_body(this);
		}
	}

	public final S_bodyContext s_body() throws RecognitionException {
		S_bodyContext _localctx = new S_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_s_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_bodyContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(SplParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(SplParser.END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<R_bodyContext> r_body() {
			return getRuleContexts(R_bodyContext.class);
		}
		public R_bodyContext r_body(int i) {
			return getRuleContext(R_bodyContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(SplParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(SplParser.SEMICOLON, i);
		}
		public R_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterR_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitR_body(this);
		}
	}

	public final R_bodyContext r_body() throws RecognitionException {
		R_bodyContext _localctx = new R_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_r_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(BEGIN);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << READ) | (1L << WRITE) | (1L << IF) | (1L << WHILE) | (1L << EXIT) | (1L << BEGIN) | (1L << UNDERSCORE) | (1L << LETTER))) != 0)) {
				{
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(106);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case READ:
						case WRITE:
						case IF:
						case WHILE:
						case EXIT:
						case UNDERSCORE:
						case LETTER:
							{
							setState(101); 
							_errHandler.sync(this);
							_la = _input.LA(1);
							do {
								{
								{
								setState(100);
								statement();
								}
								}
								setState(103); 
								_errHandler.sync(this);
								_la = _input.LA(1);
							} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << READ) | (1L << WRITE) | (1L << IF) | (1L << WHILE) | (1L << EXIT) | (1L << UNDERSCORE) | (1L << LETTER))) != 0) );
							}
							break;
						case BEGIN:
							{
							setState(105);
							r_body();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(108);
						match(SEMICOLON);
						}
						} 
					}
					setState(114);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(117);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case READ:
				case WRITE:
				case IF:
				case WHILE:
				case EXIT:
				case UNDERSCORE:
				case LETTER:
					{
					setState(115);
					statement();
					}
					break;
				case BEGIN:
					{
					setState(116);
					r_body();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			setState(121);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public Ifelse_statementContext ifelse_statement() {
			return getRuleContext(Ifelse_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Read_statementContext read_statement() {
			return getRuleContext(Read_statementContext.class,0);
		}
		public Write_statementContext write_statement() {
			return getRuleContext(Write_statementContext.class,0);
		}
		public TerminalNode EXIT() { return getToken(SplParser.EXIT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNDERSCORE:
			case LETTER:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				assign_statement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				ifelse_statement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				while_statement();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				read_statement();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				write_statement();
				}
				break;
			case EXIT:
				enterOuterAlt(_localctx, 6);
				{
				setState(128);
				match(EXIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_statementContext extends ParserRuleContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(SplParser.ASSIGN, 0); }
		public TerminalNode STRING() { return getToken(SplParser.STRING, 0); }
		public Array_bracksContext array_bracks() {
			return getRuleContext(Array_bracksContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(SplParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(SplParser.FALSE, 0); }
		public Comp_resContext comp_res() {
			return getRuleContext(Comp_resContext.class,0);
		}
		public Asn_numbersContext asn_numbers() {
			return getRuleContext(Asn_numbersContext.class,0);
		}
		public Assign_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterAssign_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitAssign_statement(this);
		}
	}

	public final Assign_statementContext assign_statement() throws RecognitionException {
		Assign_statementContext _localctx = new Assign_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			id();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRA) {
				{
				setState(132);
				array_bracks();
				}
			}

			setState(135);
			match(ASSIGN);
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case DIGIT:
			case READ:
			case WRITE:
			case IF:
			case ELSE:
			case WHILE:
			case EXIT:
			case END:
			case PLUS:
			case MINUS:
			case UNDERSCORE:
			case SEMICOLON:
			case LETTER:
				{
				setState(137);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(136);
					id();
					}
					break;
				}
				setState(140);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(139);
					comp_res();
					}
					break;
				}
				setState(143);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(142);
					asn_numbers();
					}
					break;
				}
				}
				break;
			case TRUE:
			case FALSE:
				{
				setState(145);
				_la = _input.LA(1);
				if ( !(_la==TRUE || _la==FALSE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case STRING:
				{
				setState(146);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ifelse_statementContext extends ParserRuleContext {
		public If_stContext if_st() {
			return getRuleContext(If_stContext.class,0);
		}
		public Else_stContext else_st() {
			return getRuleContext(Else_stContext.class,0);
		}
		public Ifelse_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterIfelse_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitIfelse_statement(this);
		}
	}

	public final Ifelse_statementContext ifelse_statement() throws RecognitionException {
		Ifelse_statementContext _localctx = new Ifelse_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifelse_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			if_st();
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(150);
				else_st();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_stContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SplParser.IF, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode THEN() { return getToken(SplParser.THEN, 0); }
		public S_bodyContext s_body() {
			return getRuleContext(S_bodyContext.class,0);
		}
		public R_bodyContext r_body() {
			return getRuleContext(R_bodyContext.class,0);
		}
		public If_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterIf_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitIf_st(this);
		}
	}
